Tue Apr  4 20:42:49 2006  Tim Janik  <timj@gtk.org>

	* tools/mathtool.c: CVS moved.

Tue Apr  4 20:10:39 2006  Tim Janik  <timj@gtk.org>

	* tools/cutvorbis.c:
	* tools/magictest.c:
	* tools/mathtests.c: CVS copied.

Tue Apr  4 02:08:16 2006  Tim Janik  <timj@gtk.org>

	* slowtests/Makefile.am: build and check perftest testwavechunk.

	* tests/Makefile.am: removed outdated rules.

	* tests/bse/Makefile.am: build and test cxxbinding and testplugin.la.

	* tools/scripts/Makefile.am: added script tools waveloadtest.scm and
	noteplaytest.scm.

Tue Apr  4 01:21:32 2006  Tim Janik  <timj@gtk.org>

	* bse/tests/testwavechunk.c:
	* tests/cxxbinding.cc:
	* tests/empty.ogg:
	* tests/perftest.cc:
	* tests/testplugin.cc:
	* tests/testplugin.idl:
	* tests/bse/loophandle.c:
	* tests/scripts/noteplaytest.scm:
	* tests/scripts/waveloadtest.scm: removed from CVS.

Tue Apr  4 01:14:42 2006  Tim Janik  <timj@gtk.org>

	* bse/tests/loophandle.c:
	* slowtests/perftest.cc:
	* slowtests/testwavechunk.c:
	* tests/bse/cxxbinding.cc:
	* tests/bse/empty.ogg:
	* tests/bse/testplugin.cc:
	* tests/bse/testplugin.idl:
	* tools/scripts/noteplaytest.scm:
	* tools/scripts/waveloadtest.scm: CVS copied.

Tue Apr  4 01:04:27 2006  Tim Janik  <timj@gtk.org>

	* autogen.sh: force upgrade of automake-originating files.

	* configure.in: only issue a warning if pcm/midi devices couldn't
	be found instead of erroring out. default to /dev/dsp and /dev/midi
	if no devices could be detected.

Sun Apr  2 18:58:34 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/Makefile.am: don't link against libsfi/libbirnet if
	linking against libbse.

	* beast-gtk/gxk/dummy.cc:
	* beast-gtk/gxk/Makefile.am: added C++ dummy, for proper linkage
	with older gccs.

Sun Apr  2 18:16:56 2006  Tim Janik  <timj@gtk.org>

	* Makefile.decl: auto-add GENERATED to MAINTAINERCLEANFILES.
	added GENERATED_CLEANFILES for generated files to be removed upon
	make clean. 

	* beast-gtk/Makefile.am: fixed dependencies. simplified build rules,